# products-ve

./: .gitignore  biome.json  docker-compose.yml  nx.json  package-lock.json  package.json  pnpm-lock.yaml  readme.md
.github/workflows/: server-checks.yml  server-tests.yml  server-ts-checks.yml  server-ts-tests.yml  ui-checks.yml
client/: project.json
client-e2e/: playwright.config.ts  project.json
client/app/: layout.tsx  page.module.scss  page.tsx
client/redux/: store.ts
client/styles/: main.scss
db/: init.sql  query.sql  seed.sql
experiments/location-exporter/: create-seed-file.ts  get-locations.ts  package.json
experiments/server-rust/: Cargo.toml
location-exporter/: locations.json  pnpm-lock.yaml  readme.md
projects/server/: config.ts  jest.config.ts  package.json  pnpm-lock.yaml  schema.graphql  tsconfig.json
projects/ui/: codegen.ts  package.json  rome.json
script/: create-seed-file.ts  get-locations.ts  index.ts  locations.csv  locations.json  package.json  tsconfig.json
server/: Cargo.toml  codegen.yml  readme.md  schema.graphql
server-stores-subgraph/: codegen.yml
server-ts/: codegen.yml  config.ts  index.ts  jest.config.ts  package.json  pnpm-lock.yaml  rome.json  schema.graphql
server-ts/__generated__/: resolvers-types.ts
server-ts/db/: index.ts  migration.ts  schema.dbml
server-ts/libs/: apollo-logger.ts  logger.ts
server-ts/models/: store.ts
server/db/: index.ts
server/models/: store.ts
server/resolvers/: index.ts  mutations.ts
server/src/: main.rs
server/tests/: config.ts  store-by-id-query.test.ts
(+63 files in other folders)
