[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = "0.15.11"
tokio-postgres = "0.7.8"
uuid = {version = "1.3.0", features = ["v4"]}
warp = "0.3.3"
serde_json = "1.0.95"
tokio = {version = "1.27.0", features=["rt", "macros", "rt-multi-thread"]}
juniper_warp = "0.7.0"
postgres-types = { version = "0.2.5", features = ["derive"] }
